Refator:styling templates and adding static files

--- a/jobportal/templates/home.html
+++ b/jobportal/templates/home.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" href="{% static '/style.css' %}">
     <title>Home</title>
 </head>
 <body>
@@ -48,6 +50,8 @@
                     {% if job.company.name == user_company.name %}
                         <a href="{% url 'UpdateJob' job.id %}">Update</a> |
                         <a href="{% url 'DeleteJob' job.id %}">Delete</a>
+                    {% else %}
+                        <span>You can't update or delete</span>
                     {% endif %}
                 </td>
             </tr>
