--- a/jobportal/templates/login.html
+++ b/jobportal/templates/login.html
@@ -2,24 +2,59 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <title>Login</title>
 </head>
 
 <body>
-    <form method="post">
-        <h1>Login here</h1>
-        {% csrf_token %}
-        <label for="username">Username</label>
-        <input type="text" placeholder="Enter email" id="username" name="username">
-
-        <label for="password">Password</label>
-        <input type="password" placeholder="Password" id="password" name="password">
-
-        <button type="submit">Log In</button>
-        <a href="{% url 'SignUp' %}">Create a account</a>
-    </form>
+  <section class="py-3 py-md-5 py-xl-8">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="mb-5">
+            <h2 class="display-5 fw-bold text-center">Sign In</h2>
+            <p class="text-center m-0">Don't have an account? <a href="{% url 'SignUp' %}"
+                class="link-primary text-decoration-none">Sign Up</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-10 col-xl-8">
+          <div class="row gy-5 justify-content-center">
+            <div class="col-12 col-lg-5">
+              <form method="post">
+                {% csrf_token %}
+                <div class="row gy-3 overflow-hidden">
+                  <div class="col-12">
+                    <div class="form-floating mb-3">
+                      <input type="text" class="form-control border-0 border-bottom rounded-0" name="username"
+                        id="firstName" placeholder="Name" required>
+                      <label for="firstName" class="form-label">Username</label>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="form-floating mb-3">
+                      <input type="password" class="form-control border-0 border-bottom rounded-0" name="password"
+                        id="password" value="" placeholder="Password" required>
+                      <label for="password" class="form-label">Password</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12">
+                  <div class="d-grid">
+                    <button class="btn btn-primary btn-lg" type="submit">Sign In</button>
+                  </div>
+                </div>
+            </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
 </body>
 
 </html>
