--- a/jobportal/templates/register_company.html
+++ b/jobportal/templates/register_company.html
@@ -3,22 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <title>Register Company</title>
 </head>
 <body>
-    <h1>Register Your Company</h1>
-    <form method="post">
-        {% csrf_token %}
-        <label for="cname">Company name</label>
-        <input type="text" placeholder="Enter Company name" id="cname" name="cname">
-
-        <label for="address">Address</label>
-        <input type="text" placeholder="Enter Company's Address" id="address" name="address">
-
-        <label for="contact">Contact Number</label>
-        <input type="text" placeholder="enter contact_number" id="contact" name="contact">
-
-        <button type="submit">Register</button>
-    </form>
+<div class="bg-light py-3 py-md-5">
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-12 col-md-11 col-lg-8 col-xl-7 col-xxl-6">
+          <div class="bg-white p-4 p-md-5 rounded shadow-sm">
+            <div class="row">
+              <div class="col-12">
+                <div class="mb-5">
+                  <h2 class="h3">Company Registration</h2>
+                  <h3 class="fs-6 fw-normal text-secondary m-0">Enter your comapany's details to register</h3>
+                </div>
+              </div>
+            </div>
+            <form method="post">
+              {% csrf_token %}
+              <div class="row gy-3 gy-md-4 overflow-hidden">
+                <div class="col-12">
+                  <label for="firstName" class="form-label">Company Name <span class="text-danger">*</span></label>
+                  <input type="text" class="form-control" name="cname" id="firstName" placeholder="Aubergine" required>
+                </div>
+                <div class="col-12">
+                  <label for="lastName" class="form-label">Address <span class="text-danger">*</span></label>
+                  <input type="textarea" class="form-control" name="address" id="lastName" placeholder="prahladnagar,Ahmedabad" required>
+                </div>
+                <div class="col-12">
+                  <label for="email" class="form-label">Conatct <span class="text-danger">*</span></label>
+                  <input type="text" class="form-control" name="contact" id="email" placeholder="999999999" required>
+                </div>
+                <div class="col-12">
+                  <div class="d-grid">
+                    <button class="btn btn-lg btn-primary" type="submit">Register Company</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
