--- a/jobportal/templates/signup.html
+++ b/jobportal/templates/signup.html
@@ -1,28 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <title>SignUp</title>
 </head>
+
 <body>
-    <h1>Hello SignUp here</h1>
-    <form method="post">
-        {% csrf_token %}
-        <label for="username">name</label>
-        <input type="text" placeholder="Enter name" id="username" name="username">
-
-        <label for="email">email</label>
-        <input type="text" placeholder="Enter email" id="email" name="email">
-
-        <label for="contact">Contact Number</label>
-        <input type="text" placeholder="enter contact_number" id="contact" name="contact">
-
-        <label for="password">Password</label>
-        <input type="password" placeholder="Password" id="password" name="password">
-
-        <button type="submit">SignUp</button>
-        <a href="{% url 'Login' %}">Existing account</a>
-    </form>
+    <section class="py-3 py-md-5 py-xl-8">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="mb-5">
+                        <h2 class="display-5 fw-bold text-center">Sign up</h2>
+                        <p class="text-center m-0">Already have an account? <a href="{% url 'Login' %}"
+                                class="link-primary text-decoration-none">Sign in</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-12 col-lg-10 col-xl-8">
+                    <div class="row gy-5 justify-content-center">
+                        <div class="col-12 col-lg-5">
+                            <form method="post">
+                                {% csrf_token %}
+                                <div class="row gy-3 overflow-hidden">
+                                    <div class="col-12">
+                                        <div class="form-floating mb-3">
+                                            <input type="text" class="form-control border-0 border-bottom rounded-0"
+                                                name="username" id="firstName" placeholder="UserName" required>
+                                            <label for="firstName" class="form-label">UserName</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="form-floating mb-3">
+                                            <input type="text" class="form-control border-0 border-bottom rounded-0"
+                                                name="contact" id="lastName" placeholder="Enter Contact" required>
+                                            <label for="lastName" class="form-label">Contact</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="form-floating mb-3">
+                                            <input type="email" class="form-control border-0 border-bottom rounded-0"
+                                                name="email" id="email" placeholder="name@example.com" required>
+                                            <label for="email" class="form-label">Email</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="form-floating mb-3">
+                                            <input type="password" class="form-control border-0 border-bottom rounded-0"
+                                                name="password" id="password" value="" placeholder="Password" required>
+                                            <label for="password" class="form-label">Password</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="" name="iAgree"
+                                                id="iAgree" required>
+                                            <label class="form-check-label text-secondary" for="iAgree">
+                                                I agree to the <a href="#!"
+                                                    class="link-primary text-decoration-none">terms and conditions</a>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="d-grid">
+                                            <button class="btn btn-primary btn-lg" type="submit">Sign up</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
