--- a/jobportal/templates/createjob.html
+++ b/jobportal/templates/createjob.html
@@ -3,40 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <title>Create Job</title>
 </head>
 <body>
-    <h1>Create a New Job</h1>
-    <form method="post">
-        {% csrf_token %}
-        <div>
-            <label for="title">Title:</label>
-            <input type="text" placeholder="Enter Job Title" id="title" name="title">
+    
+<div class="bg-light py-3 py-md-5">
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-12 col-md-11 col-lg-8 col-xl-7 col-xxl-6">
+          <div class="bg-white p-4 p-md-5 rounded shadow-sm">
+            <div class="row">
+              <div class="col-12">
+                <div class="mb-5">
+                  <h2 class="h3">Post Job</h2>
+                  <h3 class="fs-6 fw-normal text-secondary m-0">Enter your job's details to post</h3>
+                </div>
+              </div>
+            </div>
+            <form method="post">
+              {% csrf_token %}
+              <div class="row gy-3 gy-md-4 overflow-hidden">
+                <div class="col-12">
+                  <label for="firstName" class="form-label">Title<span class="text-danger">*</span></label>
+                  <input type="text" class="form-control" name="title" id="firstName" placeholder="SDE" required>
+                </div>
+                <div class="col-12">
+                  <label for="lastName" class="form-label">Description <span class="text-danger">*</span></label>
+                  <input type="textarea" class="form-control" name="description" id="lastName" placeholder="Softtware Engineer" required>
+                </div>
+                <div class="col-12">
+                  <label for="email" class="form-label">location <span class="text-danger">*</span></label>
+                  <input type="text" class="form-control" name="location" id="email" placeholder="gurugram" required>
+                </div>
+                <div class="col-12">
+                    <label for="email" class="form-label">Salary <span class="text-danger">*</span></label>
+                    <input type="text" class="form-control" name="salary" id="email" placeholder="500000" required>
+                  </div>
+                <div class="col-12">
+                  <div class="d-grid">
+                    <button class="btn btn-lg btn-primary" type="submit">Post Job</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
-
-        <div>
-            <label for="description">Description:</label>
-            <input type="textarea" placeholder="Enter description" id="description" name="description">
-        </div>
-
-        <div>
-            <label for="location">Location:</label>
-            <input type="text" placeholder="Enter location" id="location" name="location">
-        </div>
-
-        <div>
-            <label for="tags">Tags:</label>
-            <input type="text" placeholder="Enter tags" id="tags" name="tags">
-        </div>
-
-        <div>
-            <label for="salary">Salary:</label>
-            <input type="text" placeholder="Enter salary" id="salary" name="salary">
-        </div>
-
-        <button type="submit">Create Job</button>
-    </form>
-    <br>
+      </div>
+    </div>
+  </div>
     <a href="{% url 'Home' %}">Back to Home</a>
 </body>
 </html>
