--- a/jobportal/templates/home.html
+++ b/jobportal/templates/home.html
@@ -37,7 +37,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for job in jobs %}
+            {% for job in page_obj %}
             <tr>
                 <td>{{ job.company.name }}</td>
                 <td>{{ job.title }}</td>
@@ -56,6 +56,23 @@
                 </td>
             </tr>
             {% endfor %}
+            <div class="pagination">
+                <span class="step-links">
+                    {% if page_obj.has_previous %}
+                        <a href="?page=1">&laquo; first</a>
+                        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                    {% endif %}
+            
+                    <span class="current">
+                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                    </span>
+            
+                    {% if page_obj.has_next %}
+                        <a href="?page={{ page_obj.next_page_number }}">next</a>
+                        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                    {% endif %}
+                </span>
+            </div>
         </tbody>
     </table>
 </body>
