--- a/jobportal/templates/createjob.html
+++ b/jobportal/templates/createjob.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <title>Create Job</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <title>Create Job</title>
 </head>
+
 <body>
-    
-<div class="bg-light py-3 py-md-5">
+
+  <div class="bg-light py-3 py-md-5">
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-12 col-md-11 col-lg-8 col-xl-7 col-xxl-6">
@@ -30,16 +31,17 @@
                 </div>
                 <div class="col-12">
                   <label for="lastName" class="form-label">Description <span class="text-danger">*</span></label>
-                  <input type="textarea" class="form-control" name="description" id="lastName" placeholder="Softtware Engineer" required>
+                  <input type="textarea" class="form-control" name="description" id="lastName"
+                    placeholder="Softtware Engineer" required>
                 </div>
                 <div class="col-12">
                   <label for="email" class="form-label">location <span class="text-danger">*</span></label>
                   <input type="text" class="form-control" name="location" id="email" placeholder="gurugram" required>
                 </div>
                 <div class="col-12">
-                    <label for="email" class="form-label">Salary <span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" name="salary" id="email" placeholder="500000" required>
-                  </div>
+                  <label for="email" class="form-label">Salary <span class="text-danger">*</span></label>
+                  <input type="text" class="form-control" name="salary" id="email" placeholder="500000" required>
+                </div>
                 <div class="col-12">
                   <div class="d-grid">
                     <button class="btn btn-lg btn-primary" type="submit">Post Job</button>
@@ -52,6 +54,7 @@
       </div>
     </div>
   </div>
-    <a href="{% url 'Home' %}">Back to Home</a>
+  <a href="{% url 'Home' %}">Back to Home</a>
 </body>
+
 </html>
