--- a/jobportal/templates/login.html
+++ b/jobportal/templates/login.html
@@ -15,7 +15,7 @@
         <div class="col-12">
           <div class="mb-5">
             <h2 class="display-5 fw-bold text-center">Sign In</h2>
-            <p class="text-center m-0">Don't have an account? <a href="{% url 'SignUp' %}"
+            <p class="text-center m-0">Don't have an account? <a href="{% url 'signUp' %}"
                 class="link-primary text-decoration-none">Sign Up</a></p>
           </div>
         </div>
